# autotest-iot

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: boards.yaml.example  defects.example.yaml
docs/: ARCHITECTURE.md  DEPLOY.md  ROLLOUT.md
examples/panic_demo/: CMakeLists.txt
examples/panic_demo/main/: main.c
scripts/: gen_flow_png.py  push-all.sh
src/autotest_mcp/: __init__.py  concurrency.py  config.py  fix_pipeline.py  git_client.py  llm.py  mcp_client.py  pipeline.py  run_control_plane.py  run_gateway_register.py  run_m1.py  run_m2.py  run_m3.py  run_orchestrate.py  server.py  testing.py  transport.py
src/autotest_mcp/agents/: __init__.py  diagnostician.py  fixer.py  models.py  repro_planner.py  summarizer.py
src/autotest_mcp/control_plane/: __init__.py  models.py  plane.py  queue.py  registrar.py  registry.py  server.py
src/autotest_mcp/defects/: __init__.py  jira.py  jira_rest.py  models.py
src/autotest_mcp/feishu/: __init__.py  driver.py  gate.py
src/autotest_mcp/knowledge/: __init__.py  models.py  recall.py  store.py
src/autotest_mcp/orchestrator/: __init__.py  graph.py
src/autotest_mcp/tools/: __init__.py  builder.py  device.py  flasher.py  hardware.py  serial_mon.py  symbolizer.py
tests/: conftest.py  test_builder.py  test_concurrency.py  test_control_plane.py  test_device.py  test_feishu.py  test_flasher.py  test_hardware.py  test_m1.py  test_m2.py  test_m3.py  test_orchestrator.py  test_real_interfaces.py  test_serial_mon.py  test_server_smoke.py  test_symbolizer.py  test_transport.py
